# dsp-project

./: .gitignore  README.md  pyproject.toml
configs/hw1/: config.py  config.yaml
configs/hw2/: config.py  config.yaml
configs/hw3/: config.py  config.yaml
dsp_project/: hw1_impulse_response.py  hw1_sound_processing.py  hw2_mixer.py  hw3_df2.py  utils.py
dsp_project/notebooks/: hw2_metrics_calc.ipynb  hw3_metrics_calc.ipynb
