[tool.poetry]
name = "dsp-project"
version = "0.1.0"
description = "DSP course project"
authors = ["destitutiones <albina.rukhadze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.2"
soundfile = "^0.12.1"
hydra-core = "^1.3.2"
logging = "^0.4.9.6"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
